# isimip-ea

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yaml
isimip_ea/: config.py  extractions.py  main.py  models.py  utils.py
isimip_qa/: cli.py  config.py  extractions.py  main.py  models.py  plots.py  utils.py
